--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,4 +8,13 @@
     margin: 1.5em 10px;
     padding: 0.5em 10px;
     quotes: "\201C""\201D""\2018""\2019";
-  }
+}
+@media only screen and (max-width: 770px) {
+    .logoText {
+        font-size: xx-large;
+    }
+}
+iframe.note-video-clip {
+    width:100%;
+    height: 400px;
+}
