--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,12 +9,15 @@
     padding: 0.5em 10px;
     quotes: "\201C""\201D""\2018""\2019";
 }
+div.articleText p iframe {
+    width:100% !important;
+    height: 400px !important;
+}
 @media only screen and (max-width: 770px) {
     .logoText {
         font-size: xx-large;
     }
-}
-iframe.note-video-clip {
-    width:100%;
-    height: 400px;
+    div.articleText p iframe {
+        height: 250px !important;
+    }
 }
