--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,11 @@
+div.articleText p strong {
+    font-weight:700;
+}
+div.articleText p {
+    font-family: 'Source Sans Pro', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+    font-weight: 300;
+    font-size: 1rem;
+}
 .articleText a {
     color: #d9534f;
     font-weight: 900 !important;
